--- a/webpage/jbhm/index.html
+++ b/webpage/jbhm/index.html
@@ -1022,6 +1022,7 @@
         <ul class="overflow_h" id="firstTab">
           <li id="qwzt" class="navTabFirst navTabCur"  onClick="javascript:rNavMain(this);changeMap('QWZT')">设备规模</li>
           <li id="gdzl" onClick="javascript:rNavMain(this);changeMap('GDZL')">供电质量</li>
+          <li id="dwzt" onClick="javascript:rNavMain(this);changeMap('DWZT')">电网状态</li>
           <li id="ywzh" onClick="javascript:rNavMain(this);changeMap('YWZH')">业务指挥</li>
           <li id="zyjk" onClick="javascript:rNavMain(this);changeMap('ZYJK')">资源监控</li>
           <li style="display: none;">通信保障</li>
@@ -1485,6 +1486,252 @@
           </div>
           <div class="ai_box hide">
 
+          </div>
+        </div>
+        <!-- 电网状态 -->
+        <div class="tab_box__item" id="dianwang" style="display:none;">
+          <ul class="status_tab status_line">
+            <li class="active_tab">电网异常</li>
+            <li >物联检测</li>
+          </ul>
+          <div class="line_box first_box">
+            <div class="monitor_box monitor_box_full pos-r Power_box" style="width: 1300px">
+              <div class="monitor_title">
+                <p>
+                  当班资源
+                </p>
+              </div>
+              <div class="clearfix"></div>
+              <div class="monitor_body">
+                <div class='textdis'>
+                  <div>
+                    <span class='dangbanshu'>出动数 <em id="tx0">0</em></span>
+                    <br/>
+                    <span class='daimingshu'>待命数 <em id="tx1">0</em></span>
+                  </div>
+                  <div>
+                    <span class='dangbanshu'>出动数 <em id="bz0">0</em></span>
+                    <br/>
+                    <span class='daimingshu'>待命数 <em id="bz1">0</em></span>
+                  </div>
+                  <div class='lasttext'>
+                    <span class='dangbanshu'>出动数 <em id="hq0">0</em></span>
+                    <br/>
+                    <span class='daimingshu'>待命数 <em id="hq1">0</em></span>
+                  </div>
+
+                </div>
+                <div class="on_duty on_duty_r1 f-l" id="on_duty_r1"></div>
+                <div class="on_duty on_duty_r1 f-l" id="on_duty_r2"></div>
+                <!--<div class="on_duty on_duty_r1 f-l" id="on_duty_r3"></div>-->
+                <div class="on_duty on_duty_r1 f-l" id="on_duty_r4"></div>
+                <div class="clearfix"></div>
+                <div class="pos-r ziYuan_box">
+                  <div class="pos-a d1">
+                    <p></p>
+                    <p id="dangban_tx_all">0</p>
+                  </div>
+                  <div class="pos-a d2">
+                    <p></p>
+                    <p id="dangban_jx_all">0</p>
+                  </div>
+                  <!--<div class="pos-a d3">
+                    <p></p>
+                    <p id="dangban_qx_all">0</p>
+                  </div>-->
+                  <div class="pos-a d4">
+                    <p></p>
+                    <p id="dangban_hq_all">0</p>
+                  </div>
+                </div>
+
+                <div class="pos-r tuLi_box">
+                  <div>
+                    <div class="f-l color_box1 pos-r"></div>
+                    <p class="f-l" style="color: #b7e7f3;font-size: 24px;">出动数</p>
+                  </div>
+                  <div>
+                    <div class="f-l color_box2 pos-r"></div>
+                    <p class="f-l" style="color: #b7e7f3;font-size: 24px;">待命数</p>
+                  </div>
+                  <div>
+                    <div class="f-l color_box3 pos-r"></div>
+                    <p class="f-l" style="margin-left: -8px;color: #b7e7f3;font-size: 24px;">后备</p>
+                  </div>
+                </div>
+                <div class="pos-r right_text" style="height:340px;">
+                  <div id='dangbanziyuanList'>
+                    <p class='wzActive' style='list-style: none;padding: 10px;color: rgb(19, 185, 231);margin-bottom: 2px;text-align: center;font-size: 20px;cursor: pointer;'>全部</p>
+                    <ul id="ul_dbzy_zy">
+                      <li class="liSelected">全部</li>
+                      <li>变电</li>
+                      <li>线路</li>
+                      <li>电缆</li>
+                      <li>配电</li>
+                      <li>自动化</li>
+                      <li>通信</li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="on_duty_title pos-r">
+                  <p>特巡</p>
+                  <p>保障</p>
+                  <!--<p>抢修</p>-->
+                  <p>后勤</p>
+                </div>
+              </div>
+            </div>
+            <div class="clearfix"></div>
+            <div class="monitor_box monitor_box_full pos-r Power_box equipment">
+              <div class="monitor_title">
+                <p>
+                  车辆装备
+                </p>
+              </div>
+              <div class="clearfix"></div>
+              <div class="monitor_body">
+                <div class="equipment_box">
+                  <ul>
+                    <li class="pos-r cars1">
+                      <p class="pos-a">
+                        <span id="car_yingji_1">0</span>
+                        <span>/</span>
+                        <span id="car_yingji_2">6</span>
+                      </p>
+                    </li>
+                    <li class="pos-r cars2">
+                      <p class="pos-a">
+                        <span id="car_zhihui_1">0</span>
+                        <span>/</span>
+                        <span id="car_zhihui_2">2</span>
+                      </p>
+                    </li>
+                    <!--<li class="pos-r cars3">-->
+                    <!--<p class="pos-a">-->
+                    <!--<span id="car_wuzi_1">0</span>-->
+                    <!--<span>/</span>-->
+                    <!--<span id="car_wuzi_2">0</span>-->
+                    <!--</p>-->
+                    <!--</li>-->
+                    <li class="pos-r cars4">
+                      <p class="pos-a">
+                        <span id="car_qiangxiu_1">0</span>
+                        <span>/</span>
+                        <span id="car_qiangxiu_2">19</span>
+                      </p>
+                    </li>
+                    <li class="pos-r cars5">
+                      <p class="pos-a">
+                        <span id="car_houqin_1">0</span>
+                        <span>/</span>
+                        <span id="car_houqin_2">3</span>
+                      </p>
+                    </li>
+                  </ul>
+                </div>
+                <div class="clearfix"></div>
+                <div class="cars_massage">
+                  <p class="line_title">
+                    跨单位、跨省市
+                  </p>
+                  <div class="table_box">
+                    <table id="table_kuodanwei" class="cars_table">
+                      <thead>
+                      <tr>
+                        <th style="width: 348px;height: 56px;">单位名称</th>
+                        <th style="width: 192px;height: 56px">联系人</th>
+                        <th style="width: 192px;height: 56px">联系方式</th>
+                        <th style="width: 570px;height: 56px">资源</th>
+                      </tr>
+                      </thead>
+                      <tbody>
+                      <!--<tr>-->
+                      <!--<th>江苏省X公司</th>-->
+                      <!--<th>班组</th>-->
+                      <!--<th>13777772415</th>-->
+                      <!--<th>变电队伍1</th>-->
+                      <!--</tr>-->
+                      <!--<tr>-->
+                      <!--<th>江苏省X公司</th>-->
+                      <!--<th>班组</th>-->
+                      <!--<th>13777772415</th>-->
+                      <!--<th>变电队伍1</th>-->
+                      <!--</tr>-->
+                      <!--<tr>-->
+                      <!--<th>江苏省X公司</th>-->
+                      <!--<th>班组</th>-->
+                      <!--<th>13777772415</th>-->
+                      <!--<th>变电队伍1</th>-->
+                      <!--</tr>-->
+                      <!--<tr>-->
+                      <!--<th>江苏省X公司</th>-->
+                      <!--<th>班组</th>-->
+                      <!--<th>13777772415</th>-->
+                      <!--<th>变电队伍1</th>-->
+                      <!--</tr>-->
+                      <!--<tr>-->
+                      <!--<th>江苏省X公司</th>-->
+                      <!--<th>班组</th>-->
+                      <!--<th>13777772415</th>-->
+                      <!--<th>变电队伍1</th>-->
+                      <!--</tr>-->
+                      <!--<tr>-->
+                      <!--<th>江苏省X公司</th>-->
+                      <!--<th>班组</th>-->
+                      <!--<th>13777772415</th>-->
+                      <!--<th>变电队伍1</th>-->
+                      <!--</tr>-->
+                      <!--<tr>-->
+                      <!--<th>江苏省X公司</th>-->
+                      <!--<th>班组</th>-->
+                      <!--<th>13777772415</th>-->
+                      <!--<th>变电队伍1</th>-->
+                      <!--</tr>-->
+                      <!--<tr>-->
+                      <!--<th>江苏省X公司</th>-->
+                      <!--<th>班组</th>-->
+                      <!--<th>13777772415</th>-->
+                      <!--<th>变电队伍1</th>-->
+                      <!--</tr>-->
+                      <!--<tr>-->
+                      <!--<th>江苏省X公司</th>-->
+                      <!--<th>班组</th>-->
+                      <!--<th>13777772415</th>-->
+                      <!--<th>变电队伍1</th>-->
+                      <!--</tr>-->
+                      <!--<tr>-->
+                      <!--<th>江苏省X公司</th>-->
+                      <!--<th>班组</th>-->
+                      <!--<th>13777772415</th>-->
+                      <!--<th>变电队伍1</th>-->
+                      <!--</tr>-->
+                      <!--<tr>-->
+                      <!--<th>江苏省X公司</th>-->
+                      <!--<th>班组</th>-->
+                      <!--<th>13777772415</th>-->
+                      <!--<th>变电队伍1</th>-->
+                      <!--</tr>-->
+                      <!--<tr>-->
+                      <!--<th>江苏省X公司</th>-->
+                      <!--<th>班组</th>-->
+                      <!--<th>13777772415</th>-->
+                      <!--<th>变电队伍1</th>-->
+                      <!--</tr>-->
+                      <!--<tr>-->
+                      <!--<th>江苏省X公司</th>-->
+                      <!--<th>班组</th>-->
+                      <!--<th>13777772415</th>-->
+                      <!--<th>变电队伍1</th>-->
+                      <!--</tr>-->
+                      </tbody>
+                    </table>
+                  </div>
+
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="line_box first_box ">
           </div>
         </div>
         <!-- 业务指挥 -->
