--- a/webpage/jbhm/ydzt-wljc.html
+++ b/webpage/jbhm/ydzt-wljc.html
@@ -62,7 +62,7 @@
           </span>
         <span class="time">02:32:58</span>
       </div>
-      <ul>
+      <ul class="on">
         <li class="main">
           <span class="time">02:32:58</span>
           <span>chuguangzhan sisodosds</span>
@@ -76,7 +76,7 @@
       </ul>
     </div>
 
-    <div class="ul-box first active">
+    <div class="ul-box  ">
       <div class="item-handle dis-flex">
           <span class="item-box dis-flex">
             <span class="yuan "></span>
@@ -100,7 +100,7 @@
       </ul>
     </div>
 
-    <div class="ul-box first active">
+    <div class="ul-box  ">
       <div class="item-handle dis-flex">
           <span class="item-box dis-flex">
             <span class="yuan "></span>
@@ -124,7 +124,7 @@
       </ul>
     </div>
 
-    <div class="ul-box first active">
+    <div class="ul-box  ">
       <div class="item-handle dis-flex">
           <span class="item-box dis-flex">
             <span class="yuan "></span>
@@ -148,7 +148,7 @@
       </ul>
     </div>
 
-    <div class="ul-box first active">
+    <div class="ul-box  ">
       <div class="item-handle dis-flex">
           <span class="item-box dis-flex">
             <span class="yuan "></span>
@@ -172,7 +172,7 @@
       </ul>
     </div>
 
-    <div class="ul-box first active">
+    <div class="ul-box  ">
       <div class="item-handle dis-flex">
           <span class="item-box dis-flex">
             <span class="yuan "></span>
@@ -196,7 +196,7 @@
       </ul>
     </div>
 
-    <div class="ul-box first active">
+    <div class="ul-box  ">
       <div class="item-handle dis-flex">
           <span class="item-box dis-flex">
             <span class="yuan "></span>
@@ -220,7 +220,7 @@
       </ul>
     </div>
 
-    <div class="ul-box first active">
+    <div class="ul-box  ">
       <div class="item-handle dis-flex">
           <span class="item-box dis-flex">
             <span class="yuan "></span>
