--- a/webpage/jbhm/ydzt-wljc.html
+++ b/webpage/jbhm/ydzt-wljc.html
@@ -53,195 +53,211 @@
   </div>
   <div class="wljc-list">
     <div class="ul-box first active">
-      <div class="item-handle dis-flex">
+      <div class="ul-bg">
+        <div class="item-handle dis-flex">
           <span class="item-box dis-flex">
             <span class="yuan "></span>
             <span class="item-title">设备跳闸 </span>
             <span class="item-title-color">（诸光站光26沪嘉甲跳闸，影响用户100户） </span>
             <span class="arrow-up"></span>
           </span>
-        <span class="time">02:32:58</span>
+          <span class="time">02:32:58</span>
+        </div>
+        <ul class="on">
+          <li class="main">
+            <span class="time">02:32:58</span>
+            <span>chuguangzhan sisodosds</span>
+            <span class="dec">跳闸</span>
+          </li>
+          <li class="main">
+            <span class="time">02:32:58</span>
+            <span>chuguangzhan sisodosds</span>
+            <span class="dec">跳闸</span>
+          </li>
+        </ul>
       </div>
-      <ul class="on">
-        <li class="main">
-          <span class="time">02:32:58</span>
-          <span>chuguangzhan sisodosds</span>
-          <span class="dec">跳闸</span>
-        </li>
-        <li class="main">
-          <span class="time">02:32:58</span>
-          <span>chuguangzhan sisodosds</span>
-          <span class="dec">跳闸</span>
-        </li>
-      </ul>
     </div>
 
     <div class="ul-box  ">
-      <div class="item-handle dis-flex">
+      <div class="ul-bg">
+        <div class="item-handle dis-flex">
           <span class="item-box dis-flex">
             <span class="yuan "></span>
             <span class="item-title">保护动作 </span>
             <span class="item-title-color">（诸光站光26沪嘉甲跳闸，影响用户100户） </span>
             <span class="arrow-up"></span>
           </span>
-        <span class="time">02:32:58</span>
+          <span class="time">02:32:58</span>
+        </div>
+        <ul>
+          <li class="main">
+            <span class="time">02:32:58</span>
+            <span>chuguangzhan sisodosds</span>
+            <span class="dec">保护动作</span>
+          </li>
+          <li class="main">
+            <span class="time">02:32:58</span>
+            <span>chuguangzhan sisodosds</span>
+            <span class="dec">保护动作</span>
+          </li>
+        </ul>
       </div>
-      <ul>
-        <li class="main">
-          <span class="time">02:32:58</span>
-          <span>chuguangzhan sisodosds</span>
-          <span class="dec">保护动作</span>
-        </li>
-        <li class="main">
-          <span class="time">02:32:58</span>
-          <span>chuguangzhan sisodosds</span>
-          <span class="dec">保护动作</span>
-        </li>
-      </ul>
     </div>
 
     <div class="ul-box  ">
-      <div class="item-handle dis-flex">
+      <div class="ul-bg">
+        <div class="item-handle dis-flex">
           <span class="item-box dis-flex">
             <span class="yuan "></span>
             <span class="item-title">特巡安排 </span>
             <span class="item-title-color">（诸光站光26沪嘉甲跳闸，影响用户100户） </span>
             <span class="arrow-up"></span>
           </span>
-        <span class="time">02:32:58</span>
+          <span class="time">02:32:58</span>
+        </div>
+        <ul>
+          <li class="main">
+            <span class="time">02:32:58</span>
+            <span>chuguangzhan sisodosds</span>
+            <span class="dec">特巡安排</span>
+          </li>
+          <li class="main">
+            <span class="time">02:32:58</span>
+            <span>chuguangzhan sisodosds</span>
+            <span class="dec">特巡安排</span>
+          </li>
+        </ul>
       </div>
-      <ul>
-        <li class="main">
-          <span class="time">02:32:58</span>
-          <span>chuguangzhan sisodosds</span>
-          <span class="dec">特巡安排</span>
-        </li>
-        <li class="main">
-          <span class="time">02:32:58</span>
-          <span>chuguangzhan sisodosds</span>
-          <span class="dec">特巡安排</span>
-        </li>
-      </ul>
     </div>
 
     <div class="ul-box  ">
-      <div class="item-handle dis-flex">
+      <div class="ul-bg">
+        <div class="item-handle dis-flex">
           <span class="item-box dis-flex">
             <span class="yuan "></span>
             <span class="item-title">故障勘察 </span>
             <span class="item-title-color">（诸光站光26沪嘉甲跳闸，影响用户100户） </span>
             <span class="arrow-up"></span>
           </span>
-        <span class="time">02:32:58</span>
+          <span class="time">02:32:58</span>
+        </div>
+        <ul>
+          <li class="main">
+            <span class="time">02:32:58</span>
+            <span>chuguangzhan sisodosds</span>
+            <span class="dec">故障勘察</span>
+          </li>
+          <li class="main">
+            <span class="time">02:32:58</span>
+            <span>chuguangzhan sisodosds</span>
+            <span class="dec">故障勘察</span>
+          </li>
+        </ul>
       </div>
-      <ul>
-        <li class="main">
-          <span class="time">02:32:58</span>
-          <span>chuguangzhan sisodosds</span>
-          <span class="dec">故障勘察</span>
-        </li>
-        <li class="main">
-          <span class="time">02:32:58</span>
-          <span>chuguangzhan sisodosds</span>
-          <span class="dec">故障勘察</span>
-        </li>
-      </ul>
     </div>
 
     <div class="ul-box  ">
-      <div class="item-handle dis-flex">
+      <div class="ul-bg">
+        <div class="item-handle dis-flex">
           <span class="item-box dis-flex">
             <span class="yuan "></span>
             <span class="item-title">智能研判 </span>
             <span class="item-title-color">（诸光站光26沪嘉甲跳闸，影响用户100户） </span>
             <span class="arrow-up"></span>
           </span>
-        <span class="time">02:32:58</span>
+          <span class="time">02:32:58</span>
+        </div>
+        <ul>
+          <li class="main">
+            <span class="time">02:32:58</span>
+            <span>chuguangzhan sisodosds</span>
+            <span class="dec">智能研判</span>
+          </li>
+          <li class="main">
+            <span class="time">02:32:58</span>
+            <span>chuguangzhan sisodosds</span>
+            <span class="dec">智能研判</span>
+          </li>
+        </ul>
       </div>
-      <ul>
-        <li class="main">
-          <span class="time">02:32:58</span>
-          <span>chuguangzhan sisodosds</span>
-          <span class="dec">智能研判</span>
-        </li>
-        <li class="main">
-          <span class="time">02:32:58</span>
-          <span>chuguangzhan sisodosds</span>
-          <span class="dec">智能研判</span>
-        </li>
-      </ul>
     </div>
 
     <div class="ul-box  ">
-      <div class="item-handle dis-flex">
+      <div class="ul-bg">
+        <div class="item-handle dis-flex">
           <span class="item-box dis-flex">
             <span class="yuan "></span>
             <span class="item-title">电网操作 </span>
             <span class="item-title-color">（诸光站光26沪嘉甲跳闸，影响用户100户） </span>
             <span class="arrow-up"></span>
           </span>
-        <span class="time">02:32:58</span>
+          <span class="time">02:32:58</span>
+        </div>
+        <ul>
+          <li class="main">
+            <span class="time">02:32:58</span>
+            <span>chuguangzhan sisodosds</span>
+            <span class="dec">电网操作</span>
+          </li>
+          <li class="main">
+            <span class="time">02:32:58</span>
+            <span>chuguangzhan sisodosds</span>
+            <span class="dec">电网操作</span>
+          </li>
+        </ul>
       </div>
-      <ul>
-        <li class="main">
-          <span class="time">02:32:58</span>
-          <span>chuguangzhan sisodosds</span>
-          <span class="dec">电网操作</span>
-        </li>
-        <li class="main">
-          <span class="time">02:32:58</span>
-          <span>chuguangzhan sisodosds</span>
-          <span class="dec">电网操作</span>
-        </li>
-      </ul>
     </div>
 
     <div class="ul-box  ">
-      <div class="item-handle dis-flex">
+      <div class="ul-bg">
+        <div class="item-handle dis-flex">
           <span class="item-box dis-flex">
             <span class="yuan "></span>
             <span class="item-title">故障修复 </span>
             <span class="item-title-color">（诸光站光26沪嘉甲跳闸，影响用户100户） </span>
             <span class="arrow-up"></span>
           </span>
-        <span class="time">02:32:58</span>
+          <span class="time">02:32:58</span>
+        </div>
+        <ul>
+          <li class="main">
+            <span class="time">02:32:58</span>
+            <span>chuguangzhan sisodosds</span>
+            <span class="dec">故障修复</span>
+          </li>
+          <li class="main">
+            <span class="time">02:32:58</span>
+            <span>chuguangzhan sisodosds</span>
+            <span class="dec">故障修复</span>
+          </li>
+        </ul>
       </div>
-      <ul>
-        <li class="main">
-          <span class="time">02:32:58</span>
-          <span>chuguangzhan sisodosds</span>
-          <span class="dec">故障修复</span>
-        </li>
-        <li class="main">
-          <span class="time">02:32:58</span>
-          <span>chuguangzhan sisodosds</span>
-          <span class="dec">故障修复</span>
-        </li>
-      </ul>
     </div>
 
     <div class="ul-box  ">
-      <div class="item-handle dis-flex">
+      <div class="ul-bg">
+        <div class="item-handle dis-flex">
           <span class="item-box dis-flex">
             <span class="yuan "></span>
             <span class="item-title">电网恢复正常 </span>
             <span class="item-title-color">（诸光站光26沪嘉甲跳闸，影响用户100户） </span>
             <span class="arrow-up"></span>
           </span>
-        <span class="time">02:32:58</span>
+          <span class="time">02:32:58</span>
+        </div>
+        <ul>
+          <li class="main">
+            <span class="time">02:32:58</span>
+            <span>chuguangzhan sisodosds</span>
+            <span class="dec">电网恢复正常</span>
+          </li>
+          <li class="main">
+            <span class="time">02:32:58</span>
+            <span>chuguangzhan sisodosds</span>
+            <span class="dec">电网恢复正常</span>
+          </li>
+        </ul>
       </div>
-      <ul>
-        <li class="main">
-          <span class="time">02:32:58</span>
-          <span>chuguangzhan sisodosds</span>
-          <span class="dec">电网恢复正常</span>
-        </li>
-        <li class="main">
-          <span class="time">02:32:58</span>
-          <span>chuguangzhan sisodosds</span>
-          <span class="dec">电网恢复正常</span>
-        </li>
-      </ul>
     </div>
 
   </div>
