'增加下一页按钮功能'

--- a/webpage/jbhm/ydzt-wljc.html
+++ b/webpage/jbhm/ydzt-wljc.html
@@ -52,7 +52,7 @@
     </div>
   </div>
   <div class="wljc-list">
-    <div class="ul-box first active">
+    <div class="ul-box first active bg">
       <div class="ul-bg">
         <div class="item-handle dis-flex">
           <span class="item-box dis-flex">
@@ -234,7 +234,7 @@
       </div>
     </div>
 
-    <div class="ul-box  ">
+    <div class="ul-box ">
       <div class="ul-bg">
         <div class="item-handle dis-flex">
           <span class="item-box dis-flex">
