'完善页面布局'

--- a/webpage/jbhm/ydzt-wljc.html
+++ b/webpage/jbhm/ydzt-wljc.html
@@ -63,18 +63,15 @@
           </span>
           <span class="time">02:32:58</span>
         </div>
-        <ul class="on">
-          <li class="main">
-            <span class="time">02:32:58</span>
-            <span>chuguangzhan sisodosds</span>
-            <span class="dec">跳闸</span>
-          </li>
-          <li class="main">
-            <span class="time">02:32:58</span>
-            <span>chuguangzhan sisodosds</span>
-            <span class="dec">跳闸</span>
-          </li>
-        </ul>
+        <div class="item-list">
+          <ul class="active ul-list">
+            <li class="main">
+              <span class="time">02:32:58</span>
+              <span>chuguangzhan sisodosds</span>
+              <span class="dec">跳闸</span>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
 
@@ -89,18 +86,30 @@
           </span>
           <span class="time">02:32:58</span>
         </div>
-        <ul>
-          <li class="main">
-            <span class="time">02:32:58</span>
-            <span>chuguangzhan sisodosds</span>
-            <span class="dec">保护动作</span>
-          </li>
-          <li class="main">
-            <span class="time">02:32:58</span>
-            <span>chuguangzhan sisodosds</span>
-            <span class="dec">保护动作</span>
-          </li>
-        </ul>
+        <div class="item-list">
+          <ul class="ul-list">
+            <li class="main">
+              <span class="time">02:32:58</span>
+              <span>chuguangzhan sisodosds</span>
+              <span class="dec">保护动作</span>
+            </li>
+            <li class="main">
+              <span class="time">02:32:58</span>
+              <span>chuguangzhan sisodosds</span>
+              <span class="dec">保护动作</span>
+            </li>
+            <li class="main">
+              <span class="time">02:32:58</span>
+              <span>chuguangzhan sisodosds</span>
+              <span class="dec">保护动作</span>
+            </li>
+            <li class="main">
+              <span class="time">02:32:58</span>
+              <span>chuguangzhan sisodosds</span>
+              <span class="dec">保护动作</span>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
 
@@ -115,18 +124,41 @@
           </span>
           <span class="time">02:32:58</span>
         </div>
-        <ul>
-          <li class="main">
-            <span class="time">02:32:58</span>
-            <span>chuguangzhan sisodosds</span>
-            <span class="dec">特巡安排</span>
-          </li>
-          <li class="main">
-            <span class="time">02:32:58</span>
-            <span>chuguangzhan sisodosds</span>
-            <span class="dec">特巡安排</span>
-          </li>
-        </ul>
+        <div class="item-list">
+          <div class="open">打开人员列表</div>
+          <ul class="ul-list">
+            <li class="main">
+              <span class="time">02:32:58</span>
+              <span class="dec">已安排</span>
+              <span>chuguangzhan sisodosds</span>
+              <span class="dec">特巡安排</span>
+            </li>
+            <li class="main">
+              <span class="time">02:32:58</span>
+              <span class="dec">已安排</span>
+              <span>chuguangzhan sisodosds</span>
+              <span class="dec">特巡安排</span>
+            </li>
+            <li class="main">
+              <span class="time">02:32:58</span>
+              <span class="dec">已安排</span>
+              <span>chuguangzhan sisodosds</span>
+              <span class="dec">特巡安排</span>
+            </li>
+            <li class="main">
+              <span class="time">02:32:58</span>
+              <span class="dec">已安排</span>
+              <span>chuguangzhan sisodosds</span>
+              <span class="dec">特巡安排</span>
+            </li>
+            <li class="main">
+              <span class="time">02:32:58</span>
+              <span class="dec">已安排</span>
+              <span>chuguangzhan sisodosds</span>
+              <span class="dec">特巡安排</span>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
 
@@ -141,18 +173,41 @@
           </span>
           <span class="time">02:32:58</span>
         </div>
-        <ul>
-          <li class="main">
-            <span class="time">02:32:58</span>
-            <span>chuguangzhan sisodosds</span>
-            <span class="dec">故障勘察</span>
-          </li>
-          <li class="main">
-            <span class="time">02:32:58</span>
-            <span>chuguangzhan sisodosds</span>
-            <span class="dec">故障勘察</span>
-          </li>
-        </ul>
+        <div class="item-list">
+          <div class="open">打开人员列表</div>
+          <ul class="ul-list">
+            <li class="main">
+              <span class="time">02:32:58</span>
+              <span class="dec">已安排</span>
+              <span>chuguangzhan sisodosds</span>
+              <span class="dec">特巡安排</span>
+            </li>
+            <li class="main">
+              <span class="time">02:32:58</span>
+              <span class="dec">已安排</span>
+              <span>chuguangzhan sisodosds</span>
+              <span class="dec">特巡安排</span>
+            </li>
+            <li class="main">
+              <span class="time">02:32:58</span>
+              <span class="dec">已安排</span>
+              <span>chuguangzhan sisodosds</span>
+              <span class="dec">特巡安排</span>
+            </li>
+            <li class="main">
+              <span class="time">02:32:58</span>
+              <span class="dec">已安排</span>
+              <span>chuguangzhan sisodosds</span>
+              <span class="dec">特巡安排</span>
+            </li>
+            <li class="main">
+              <span class="time">02:32:58</span>
+              <span class="dec">已安排</span>
+              <span>chuguangzhan sisodosds</span>
+              <span class="dec">特巡安排</span>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
 
@@ -167,18 +222,20 @@
           </span>
           <span class="time">02:32:58</span>
         </div>
-        <ul>
-          <li class="main">
-            <span class="time">02:32:58</span>
-            <span>chuguangzhan sisodosds</span>
-            <span class="dec">智能研判</span>
-          </li>
-          <li class="main">
-            <span class="time">02:32:58</span>
-            <span>chuguangzhan sisodosds</span>
-            <span class="dec">智能研判</span>
-          </li>
-        </ul>
+        <div class="item-list">
+          <ul class="ul-list">
+            <li class="main">
+              <span class="time">02:32:58</span>
+              <span>chuguangzhan sisodosds</span>
+              <span class="dec">智能研判</span>
+            </li>
+            <li class="main">
+              <span class="time">02:32:58</span>
+              <span>chuguangzhan sisodosds</span>
+              <span class="dec">智能研判</span>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
 
@@ -193,18 +250,20 @@
           </span>
           <span class="time">02:32:58</span>
         </div>
-        <ul>
-          <li class="main">
-            <span class="time">02:32:58</span>
-            <span>chuguangzhan sisodosds</span>
-            <span class="dec">电网操作</span>
-          </li>
-          <li class="main">
-            <span class="time">02:32:58</span>
-            <span>chuguangzhan sisodosds</span>
-            <span class="dec">电网操作</span>
-          </li>
-        </ul>
+        <div class="item-list">
+          <ul class="ul-list">
+            <li class="main">
+              <span class="time">02:32:58</span>
+              <span>chuguangzhan sisodosds</span>
+              <span class="dec">电网操作</span>
+            </li>
+            <li class="main">
+              <span class="time">02:32:58</span>
+              <span>chuguangzhan sisodosds</span>
+              <span class="dec">电网操作</span>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
 
@@ -219,18 +278,20 @@
           </span>
           <span class="time">02:32:58</span>
         </div>
-        <ul>
-          <li class="main">
-            <span class="time">02:32:58</span>
-            <span>chuguangzhan sisodosds</span>
-            <span class="dec">故障修复</span>
-          </li>
-          <li class="main">
-            <span class="time">02:32:58</span>
-            <span>chuguangzhan sisodosds</span>
-            <span class="dec">故障修复</span>
-          </li>
-        </ul>
+        <div class="item-list">
+          <ul class="ul-list">
+            <li class="main">
+              <span class="time">02:32:58</span>
+              <span>chuguangzhan sisodosds</span>
+              <span class="dec">故障修复</span>
+            </li>
+            <li class="main">
+              <span class="time">02:32:58</span>
+              <span>chuguangzhan sisodosds</span>
+              <span class="dec">故障修复</span>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
 
@@ -245,18 +306,20 @@
           </span>
           <span class="time">02:32:58</span>
         </div>
-        <ul>
-          <li class="main">
-            <span class="time">02:32:58</span>
-            <span>chuguangzhan sisodosds</span>
-            <span class="dec">电网恢复正常</span>
-          </li>
-          <li class="main">
-            <span class="time">02:32:58</span>
-            <span>chuguangzhan sisodosds</span>
-            <span class="dec">电网恢复正常</span>
-          </li>
-        </ul>
+        <div class="item-list">
+          <ul class="ul-list">
+            <li class="main">
+              <span class="time">02:32:58</span>
+              <span>chuguangzhan sisodosds</span>
+              <span class="dec">电网恢复正常</span>
+            </li>
+            <li class="main">
+              <span class="time">02:32:58</span>
+              <span>chuguangzhan sisodosds</span>
+              <span class="dec">电网恢复正常</span>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
 
