'完善点击功能'

--- a/webpage/jbhm/ydzt-wljc.html
+++ b/webpage/jbhm/ydzt-wljc.html
@@ -126,7 +126,7 @@
         </div>
         <div class="item-list">
           <div class="open">打开人员列表</div>
-          <ul class="ul-list">
+          <ul class="ul-list hidden display-hidden">
             <li class="main">
               <span class="time">02:32:58</span>
               <span class="dec">已安排</span>
@@ -175,7 +175,7 @@
         </div>
         <div class="item-list">
           <div class="open">打开人员列表</div>
-          <ul class="ul-list">
+          <ul class="ul-list display-hidden">
             <li class="main">
               <span class="time">02:32:58</span>
               <span class="dec">已安排</span>
