'隐藏含有button下面的list'

--- a/webpage/jbhm/ydzt-wljc.html
+++ b/webpage/jbhm/ydzt-wljc.html
@@ -64,7 +64,7 @@
           <span class="time">02:32:58</span>
         </div>
         <div class="item-list">
-          <ul class="active ul-list">
+          <ul class="active ul-list block">
             <li class="main">
               <span class="time">02:32:58</span>
               <span>chuguangzhan sisodosds</span>
@@ -87,7 +87,7 @@
           <span class="time">02:32:58</span>
         </div>
         <div class="item-list">
-          <ul class="ul-list">
+          <ul class="ul-list block">
             <li class="main">
               <span class="time">02:32:58</span>
               <span>chuguangzhan sisodosds</span>
@@ -126,7 +126,7 @@
         </div>
         <div class="item-list">
           <div class="open">打开人员列表</div>
-          <ul class="ul-list hidden display-hidden">
+          <ul class="ul-list hidden " >
             <li class="main">
               <span class="time">02:32:58</span>
               <span class="dec">已安排</span>
@@ -175,7 +175,7 @@
         </div>
         <div class="item-list">
           <div class="open">打开人员列表</div>
-          <ul class="ul-list display-hidden">
+          <ul class="ul-list hidden " >
             <li class="main">
               <span class="time">02:32:58</span>
               <span class="dec">已安排</span>
@@ -223,7 +223,7 @@
           <span class="time">02:32:58</span>
         </div>
         <div class="item-list">
-          <ul class="ul-list">
+          <ul class="ul-list block">
             <li class="main">
               <span class="time">02:32:58</span>
               <span>chuguangzhan sisodosds</span>
@@ -251,7 +251,7 @@
           <span class="time">02:32:58</span>
         </div>
         <div class="item-list">
-          <ul class="ul-list">
+          <ul class="ul-list block">
             <li class="main">
               <span class="time">02:32:58</span>
               <span>chuguangzhan sisodosds</span>
@@ -279,7 +279,7 @@
           <span class="time">02:32:58</span>
         </div>
         <div class="item-list">
-          <ul class="ul-list">
+          <ul class="ul-list block">
             <li class="main">
               <span class="time">02:32:58</span>
               <span>chuguangzhan sisodosds</span>
@@ -307,7 +307,7 @@
           <span class="time">02:32:58</span>
         </div>
         <div class="item-list">
-          <ul class="ul-list">
+          <ul class="ul-list block">
             <li class="main">
               <span class="time">02:32:58</span>
               <span>chuguangzhan sisodosds</span>
