--- a/webpage/jbhm/ydzt-wljc.html
+++ b/webpage/jbhm/ydzt-wljc.html
@@ -55,19 +55,22 @@
     <div class="ul-box first active bg">
       <div class="ul-bg">
         <div class="item-handle dis-flex">
-          <span class="item-box dis-flex">
+          <div class="item-box dis-flex">
             <span class="yuan "></span>
             <span class="item-title">设备跳闸 </span>
             <span class="item-title-color">（诸光站光26沪嘉甲跳闸，影响用户100户） </span>
             <span class="arrow-up"></span>
-          </span>
-          <span class="time">02:32:58</span>
+          </div>
+          <div class="time dis-flex">
+            <div>02:32:58</div>
+            <div class="arrow-down"></div>
+          </div>
         </div>
         <div class="item-list">
           <ul class="active ul-list block">
             <li class="main">
-              <span class="time">02:32:58</span>
-              <span>chuguangzhan sisodosds</span>
+              <span class="dec-time">02:32:58</span>
+              <span>诸光站：光26沪嘉甲</span>
               <span class="dec">跳闸</span>
             </li>
           </ul>
@@ -81,32 +84,35 @@
           <span class="item-box dis-flex">
             <span class="yuan "></span>
             <span class="item-title">保护动作 </span>
-            <span class="item-title-color">（诸光站光26沪嘉甲跳闸，影响用户100户） </span>
+            <span class="item-title-color">（自愈动作成功，影响用户10户） </span>
             <span class="arrow-up"></span>
           </span>
-          <span class="time">02:32:58</span>
+          <div class="time dis-flex">
+            <div>02:32:58</div>
+            <div class="arrow-down"></div>
+          </div>
         </div>
         <div class="item-list">
           <ul class="ul-list block">
             <li class="main">
-              <span class="time">02:32:58</span>
-              <span>chuguangzhan sisodosds</span>
-              <span class="dec">保护动作</span>
+              <span class="dec-time">02:32:58</span>
+              <span>诸光站：光26沪嘉甲</span>
+              <span class="dec-color">跳闸</span>
             </li>
             <li class="main">
-              <span class="time">02:32:58</span>
-              <span>chuguangzhan sisodosds</span>
-              <span class="dec">保护动作</span>
+              <span class="dec-time">02:32:58</span>
+              <span>诸光站：光26沪嘉甲</span>
+              <span class="dec-color">纵差保护动作</span>
             </li>
             <li class="main">
-              <span class="time">02:32:58</span>
-              <span>chuguangzhan sisodosds</span>
-              <span class="dec">保护动作</span>
+              <span class="dec-time">02:32:58</span>
+              <span>诸光站：XX开关</span>
+              <span class="dec-color">分</span>
             </li>
             <li class="main">
-              <span class="time">02:32:58</span>
-              <span>chuguangzhan sisodosds</span>
-              <span class="dec">保护动作</span>
+              <span class="dec-time">02:32:58</span>
+              <span>站3：XX开关</span>
+              <span class="dec-color">合，自愈动作完成</span>
             </li>
           </ul>
         </div>
@@ -119,43 +125,34 @@
           <span class="item-box dis-flex">
             <span class="yuan "></span>
             <span class="item-title">特巡安排 </span>
-            <span class="item-title-color">（诸光站光26沪嘉甲跳闸，影响用户100户） </span>
+            <span class="item-title-color hidden">（已经派单给A特巡人员） </span>
             <span class="arrow-up"></span>
           </span>
-          <span class="time">02:32:58</span>
+          <div class="time dis-flex">
+            <div>02:32:58</div>
+            <div class="arrow-down"></div>
+          </div>
         </div>
         <div class="item-list">
-          <div class="open">打开人员列表</div>
-          <ul class="ul-list hidden " >
+          <span class="open">打开人员列表</span>
+          <ul class="ul-list hidden ">
             <li class="main">
-              <span class="time">02:32:58</span>
+              <span class="dec-time">02:32:58</span>
               <span class="dec">已安排</span>
-              <span>chuguangzhan sisodosds</span>
-              <span class="dec">特巡安排</span>
+              <span class="dec-word">A巡视班组</span>
+              <span class="dec">巡视沪诸开关站</span>
             </li>
             <li class="main">
-              <span class="time">02:32:58</span>
+              <span class="dec-time">02:32:58</span>
               <span class="dec">已安排</span>
-              <span>chuguangzhan sisodosds</span>
-              <span class="dec">特巡安排</span>
+              <span class="dec-word">1号机器人</span>
+              <span class="dec">巡视沪诸开关站</span>
             </li>
             <li class="main">
-              <span class="time">02:32:58</span>
+              <span class="dec-time">02:32:58</span>
               <span class="dec">已安排</span>
-              <span>chuguangzhan sisodosds</span>
-              <span class="dec">特巡安排</span>
-            </li>
-            <li class="main">
-              <span class="time">02:32:58</span>
-              <span class="dec">已安排</span>
-              <span>chuguangzhan sisodosds</span>
-              <span class="dec">特巡安排</span>
-            </li>
-            <li class="main">
-              <span class="time">02:32:58</span>
-              <span class="dec">已安排</span>
-              <span>chuguangzhan sisodosds</span>
-              <span class="dec">特巡安排</span>
+              <span class="dec-word">2号机器人</span>
+              <span class="dec">巡视沪诸开关站</span>
             </li>
           </ul>
         </div>
@@ -168,45 +165,69 @@
           <span class="item-box dis-flex">
             <span class="yuan "></span>
             <span class="item-title">故障勘察 </span>
-            <span class="item-title-color">（诸光站光26沪嘉甲跳闸，影响用户100户） </span>
+            <span class="item-title-color">（已经派单A巡视人员现场故障勘察） </span>
             <span class="arrow-up"></span>
           </span>
-          <span class="time">02:32:58</span>
+          <div class="time dis-flex">
+            <div>02:32:58</div>
+            <div class="arrow-down"></div>
+          </div>
         </div>
         <div class="item-list">
-          <div class="open">打开人员列表</div>
-          <ul class="ul-list hidden " >
-            <li class="main">
-              <span class="time">02:32:58</span>
-              <span class="dec">已安排</span>
-              <span>chuguangzhan sisodosds</span>
-              <span class="dec">特巡安排</span>
-            </li>
-            <li class="main">
-              <span class="time">02:32:58</span>
-              <span class="dec">已安排</span>
-              <span>chuguangzhan sisodosds</span>
-              <span class="dec">特巡安排</span>
-            </li>
-            <li class="main">
-              <span class="time">02:32:58</span>
-              <span class="dec">已安排</span>
-              <span>chuguangzhan sisodosds</span>
-              <span class="dec">特巡安排</span>
-            </li>
-            <li class="main">
-              <span class="time">02:32:58</span>
-              <span class="dec">已安排</span>
-              <span>chuguangzhan sisodosds</span>
-              <span class="dec">特巡安排</span>
-            </li>
-            <li class="main">
-              <span class="time">02:32:58</span>
-              <span class="dec">已安排</span>
-              <span>chuguangzhan sisodosds</span>
-              <span class="dec">特巡安排</span>
-            </li>
-          </ul>
+          <span class="open">打开人员列表</span>
+          <div class="ul-list hidden ">
+            <ul>
+              <li class="main">
+                <span class="dec-time">02:32:58</span>
+                <span class="dec">已安排</span>
+                <span class="dec-word">A巡视班组</span>
+                <span class="dec">巡视沪诸开关站</span>
+              </li>
+              <li class="main">
+                <span class="dec-time">02:32:58</span>
+                <span class="dec">已安排</span>
+                <span class="dec-word">B巡视班组</span>
+                <span class="dec">巡视沪嘉开关站</span>
+              </li>
+              <li class="main">
+                <span class="dec-time">02:32:58</span>
+                <span class="dec">已安排</span>
+                <span class="dec-word">1号机器人</span>
+                <span class="dec">巡视诸光站</span>
+              </li>
+              <li class="main">
+                <span class="dec-time">02:32:58</span>
+                <span class="dec">已安排</span>
+                <span class="dec-word">1号机器人</span>
+                <span class="dec">巡视诸光站</span>
+              </li>
+            </ul>
+            <div class="ysdx">
+              <div class="ysdx-head dis-flex">
+                <span>疑似对象</span>
+                <span>类型</span>
+                <span>可信度</span>
+              </div>
+              <div class="ysdx-main">
+                <div class="main-item dis-flex">
+                  <div>光26沪嘉甲电缆</div>
+                  <div>电缆</div>
+                  <div class="dis-flex item-right">
+                    <span>高</span>
+                    <span class="queren-button">确认</span>
+                  </div>
+                </div>
+                <div class="main-item dis-flex">
+                  <div>XX工井1</div>
+                  <div>智能井盖</div>
+                  <div class="dis-flex item-right">
+                    <span>高</span>
+                    <span class="queren-button">确认</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -217,22 +238,22 @@
           <span class="item-box dis-flex">
             <span class="yuan "></span>
             <span class="item-title">智能研判 </span>
-            <span class="item-title-color">（诸光站光26沪嘉甲跳闸，影响用户100户） </span>
+            <span class="item-title-color"> </span>
             <span class="arrow-up"></span>
           </span>
-          <span class="time">02:32:58</span>
+          <div class="time dis-flex">
+            <div>02:32:58</div>
+            <div class="arrow-down"></div>
+          </div>
         </div>
         <div class="item-list">
           <ul class="ul-list block">
             <li class="main">
-              <span class="time">02:32:58</span>
-              <span>chuguangzhan sisodosds</span>
-              <span class="dec">智能研判</span>
-            </li>
-            <li class="main">
-              <span class="time">02:32:58</span>
-              <span>chuguangzhan sisodosds</span>
-              <span class="dec">智能研判</span>
+              <span class="dec-time">02:32:58</span>
+              <span class="dec-color">[人工确认]</span>
+              <span class="">诸光站徐泾港桥南侧工井</span>
+              <span class="dec-color">故障,可信度</span>
+              <span class="">高</span>
             </li>
           </ul>
         </div>
@@ -245,22 +266,25 @@
           <span class="item-box dis-flex">
             <span class="yuan "></span>
             <span class="item-title">电网操作 </span>
-            <span class="item-title-color">（诸光站光26沪嘉甲跳闸，影响用户100户） </span>
+            <span class="item-title-color">（现场安措已完成，许可汇报已完成） </span>
             <span class="arrow-up"></span>
           </span>
-          <span class="time">02:32:58</span>
+          <div class="time dis-flex">
+            <div>02:32:58</div>
+            <div class="arrow-down"></div>
+          </div>
         </div>
         <div class="item-list">
           <ul class="ul-list block">
             <li class="main">
-              <span class="time">02:32:58</span>
-              <span>chuguangzhan sisodosds</span>
-              <span class="dec">电网操作</span>
+              <span class="dec-arrow"></span>
+              <span class="dec-time">02:32:58</span>
+              <span>故障隔离已完成</span>
             </li>
             <li class="main">
-              <span class="time">02:32:58</span>
-              <span>chuguangzhan sisodosds</span>
-              <span class="dec">电网操作</span>
+              <span class="dec-arrow"></span>
+              <span class="dec-time">02:32:58</span>
+              <span>安全措施已完成</span>
             </li>
           </ul>
         </div>
@@ -273,22 +297,24 @@
           <span class="item-box dis-flex">
             <span class="yuan "></span>
             <span class="item-title">故障修复 </span>
-            <span class="item-title-color">（诸光站光26沪嘉甲跳闸，影响用户100户） </span>
+            <span class="item-title-color">（A抢修班组已到达现场） </span>
             <span class="arrow-up"></span>
           </span>
-          <span class="time">02:32:58</span>
+          <div class="time dis-flex">
+            <div>02:32:58</div>
+            <div class="arrow-down"></div>
+          </div>
         </div>
         <div class="item-list">
           <ul class="ul-list block">
             <li class="main">
-              <span class="time">02:32:58</span>
-              <span>chuguangzhan sisodosds</span>
-              <span class="dec">故障修复</span>
+              <span class="dec-time">02:32:58</span>
+              <span>A抢修班组</span>
+              <span class="dec-color">已接单</span>
             </li>
             <li class="main">
-              <span class="time">02:32:58</span>
-              <span>chuguangzhan sisodosds</span>
-              <span class="dec">故障修复</span>
+              <span class="dec-time">02:32:58</span>
+              <span>许可汇报</span>
             </li>
           </ul>
         </div>
@@ -301,22 +327,19 @@
           <span class="item-box dis-flex">
             <span class="yuan "></span>
             <span class="item-title">电网恢复正常 </span>
-            <span class="item-title-color">（诸光站光26沪嘉甲跳闸，影响用户100户） </span>
+            <span class="item-title-color">（物联监测正常） </span>
             <span class="arrow-up"></span>
           </span>
-          <span class="time">02:32:58</span>
+          <div class="time dis-flex">
+            <div>02:32:58</div>
+            <div class="arrow-down"></div>
+          </div>
         </div>
         <div class="item-list">
           <ul class="ul-list block">
             <li class="main">
-              <span class="time">02:32:58</span>
-              <span>chuguangzhan sisodosds</span>
-              <span class="dec">电网恢复正常</span>
-            </li>
-            <li class="main">
-              <span class="time">02:32:58</span>
-              <span>chuguangzhan sisodosds</span>
-              <span class="dec">电网恢复正常</span>
+              <span class="dec-time">02:32:58</span>
+              <span>恢复正常运行方式</span>
             </li>
           </ul>
         </div>
