--- a/webpage/jbhm/ydzt-wljc.html
+++ b/webpage/jbhm/ydzt-wljc.html
@@ -165,7 +165,7 @@
           <span class="item-box dis-flex">
             <span class="yuan "></span>
             <span class="item-title">故障勘察 </span>
-            <span class="item-title-color">（已经派单A巡视人员现场故障勘察） </span>
+            <span class="item-title-color hidden">（已经派单A巡视人员现场故障勘察） </span>
             <span class="arrow-up"></span>
           </span>
           <div class="time dis-flex">
@@ -277,12 +277,12 @@
         <div class="item-list">
           <ul class="ul-list block">
             <li class="main">
-              <span class="dec-arrow"></span>
+              <span class="dec-arrow">√</span>
               <span class="dec-time">02:32:58</span>
               <span>故障隔离已完成</span>
             </li>
             <li class="main">
-              <span class="dec-arrow"></span>
+              <span class="dec-arrow">√</span>
               <span class="dec-time">02:32:58</span>
               <span>安全措施已完成</span>
             </li>
