'第五部弹框功能'

--- a/webpage/jbhm/ydzt-wljc.html
+++ b/webpage/jbhm/ydzt-wljc.html
@@ -248,7 +248,7 @@
         </div>
         <div class="item-list">
           <ul class="ul-list block">
-            <li class="main">
+            <li class="main show-list">
               <span class="dec-time">02:32:58</span>
               <span class="dec-color">[人工确认]</span>
               <span class="">诸光站徐泾港桥南侧工井</span>
@@ -256,6 +256,22 @@
               <span class="">高</span>
             </li>
           </ul>
+          <div class="znyp-list hidden">
+            <div class="show-head dis-flex show-head-wid dec-color">
+              <div class="first">疑似对象</div>
+              <div>物联装置情况</div>
+              <div>缺陷</div>
+              <div>隐患</div>
+            </div>
+            <div class="show-main ">
+              <div class="show-main-item dis-flex show-head-wid">
+                <div class="first">诸光站徐泾港桥南 侧工井</div>
+                <div>异常</div>
+                <div>3</div>
+                <div>2</div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -277,12 +293,12 @@
         <div class="item-list">
           <ul class="ul-list block">
             <li class="main">
-              <span class="dec-arrow">√</span>
+              <span class="dec-arrow"></span>
               <span class="dec-time">02:32:58</span>
               <span>故障隔离已完成</span>
             </li>
             <li class="main">
-              <span class="dec-arrow">√</span>
+              <span class="dec-arrow"></span>
               <span class="dec-time">02:32:58</span>
               <span>安全措施已完成</span>
             </li>
